--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         html,
         body {
             margin: 0;
-            background-color: black;
+            background-color: #000;
             display: flex;
             justify-content: center;
             align-items: center;
