--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>JS13K TS</title>
+    <title>Salvadoran Reclamation: MS-13</title>
     <style>
         #c2d {
             width: min(100vw, calc(100vh * 16 / 9));
